--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
-  "name": "angular-gettext-tools",
+  "name": "@newlogic/angular-gettext-tools",
   "description": "Tools for extracting/compiling angular-gettext strings.",
   "version": "2.3.6",
   "homepage": "http://angular-gettext.rocketeer.be/",
-  "author": {
-    "name": "Ruben Vermeersch",
-    "email": "ruben@rocketeer.be",
-    "url": "http://rocketeer.be"
-  },
+  "author": "Ruben Vermeersch <ruben@rocketeer.be> (http://rocketeer.be)",
   "repository": {
     "type": "git",
     "url": "git://github.com/rubenv/angular-gettext-tools.git"
@@ -26,6 +22,7 @@
   "devDependencies": {
     "grunt": "~0.4.4",
     "grunt-bump": "0.0.13",
+    "grunt-cli": "^1.4.3",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-jshint": "~0.11.2",
     "grunt-contrib-watch": "~0.6.1",
@@ -45,5 +42,12 @@
     "pofile": "~1.0.0",
     "typescript": "~2.3.2",
     "typescript-eslint-parser": "^3.0.0"
+  },
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
